--- a/aula16/tabuada.html
+++ b/aula16/tabuada.html
@@ -4,31 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabuada</title>
+    <title>Exercícios JavaScript</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Tabuadas</h1>  
+        <h1>Tabuada</h1>  
     </header>
     <section>
         <div id="dados">
-            <label for="number">Número</label>
-            <input type="number" name="num" id="txtn">
-            <br><br>
-            <input type="button" value="Gerar Tabuada" onclick="tabuada()">
+            <label for="number">Número: </label>
+            <input type="number" id="num">
+            <input type="button" value="Gerar Tabuada">
+            <select name="" id=""></select>
             <br><br>
         </div>
-        <div id="res">
-            <select name="tabuada" id="seltab" size="12"> 
-            <option >Digite um número acima</option>
-            </select>
+        <div>
+             <p> Apresentando...</p>
             <br><br>
         </div>
     </section>
     <footer>
         <p> &copy; Desenvolvido para teste. </p>
     </footer>
-    <script src="script17.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
