alteração das pastas de exercícios

--- a/modelo/modelo.html
+++ b/modelo/modelo.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercícios</title>
+    <title>Modelo</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>verificador de Idade</h1>  
+        <h1>Modelo de Site</h1>  
     </header>
     <section>
         <div>
-            
+            divisão 1
             <br><br>
         </div>
         <div>
