atualização do exerc 18

--- a/moduloF/exer18.html
+++ b/moduloF/exer18.html
@@ -18,10 +18,12 @@
             <input type="button" value="Adicionar" onclick="adicionar()">
             <br><br>
             <select name="vetor" id="vet" size="10"></select>
+            <option></option>
             <input type="button" value="Finalizar" id="fim" onclick="finish()">
             <br><br>
         </div>
         <div id="res">
+           
         </div>
     </section>
     <footer>
