add files and modified

--- a/modelo/modelo.html
+++ b/modelo/modelo.html
@@ -12,11 +12,11 @@
         <h1>Modelo de Site</h1>  
     </header>
     <section>
-        <div>
+        <div id="div1">
             divisão 1
             <br><br>
         </div>
-        <div>
+        <div id="div2">
             divisão 2
             <br><br>
         </div>
